--- a/templates/result.html
+++ b/templates/result.html
@@ -4,6 +4,7 @@
 <head>
     <title>Résultat</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='result_styles.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
